<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_baseline_home_24"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_medication"
                android:icon="@drawable/ic_baseline_medical_services_24"
                android:title="@string/medications"/>
        <item
                android:id="@+id/nav_requests"
                android:icon="@drawable/ic_baseline_message_24"
                android:title="@string/requests"/>
        <item
                android:id="@+id/nav_healthtaker"
                android:icon="@drawable/ic_baseline_person_add_24"
                android:title="@string/healthtaker"/>
        <item
            android:id="@+id/nav_dependent"
            android:icon="@drawable/ic_baseline_supervisor_account_24"
            android:title="@string/dependents"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_all_out_24"
            android:title="@string/logout"/>
    </group>



</menu>
