<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/toolBar">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/login"
                android:textSize="14dp"
                android:textColor="@color/white"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>
<androidx.appcompat.widget.AppCompatEditText
    android:id="@+id/email_editText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:backgroundTint="@color/blue"
    android:hint="@string/email"
    app:layout_constraintTop_toBottomOf="@id/toolBar"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginTop="80dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/blue"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/email_editText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        />
<TextView
    android:id="@+id/forget_pass_text"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toTopOf="@id/loginButton"
    app:layout_constraintTop_toBottomOf="@id/password_edit"
     android:layout_marginTop="20dp"
    android:text="@string/forgot_your_password"
    android:layout_marginStart="30dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forget_pass_text"
        app:layout_constraintBottom_toTopOf="@id/dont_have_account"
        android:paddingStart="70dp"
        android:paddingEnd="70dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"

        />
    <TextView
        android:id="@+id/dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintBottom_toTopOf="@id/continue_as"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <TextView
        android:id="@+id/continue_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/continue_as"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dont_have_account" />

    <ImageView
        android:id="@+id/google_icon"
        android:layout_width="70dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_icons8_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continue_as"
        app:layout_constraintVertical_bias="0.217" />


</androidx.constraintlayout.widget.ConstraintLayout>