<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.AddMedicationFinal">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/pillStockET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/pillStock"
            android:layout_margin="30dp"
            android:padding="15dp"
            android:background="@drawable/custom_input"
            android:inputType="number"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />


        <CheckBox
            android:id="@+id/refillReminderCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/reminderSwitch"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.126"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pillStockET" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintFinal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/refillReminderCheckBox">

            <EditText
                android:id="@+id/pillLeftET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/pillleft"
                android:inputType="number"
                android:padding="15dp"
                android:textSize="12sp"
                android:visibility="visible"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constraintFinal" />

            <TextView
                android:id="@+id/refillReminderTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="28dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/reminderRefill"
                android:textSize="16sp"
                android:layout_marginBottom="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pillLeftET" />

            <TextView
                android:id="@+id/dateRefill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="sans-serif-medium"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.57"
                app:layout_constraintStart_toEndOf="@+id/refillReminderTV"
                app:layout_constraintTop_toBottomOf="@+id/pillLeftET" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/doneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/done"
            android:layout_marginTop="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintFinal"
            app:layout_constraintVertical_bias="0.952" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:layout_margin="30dp"
            android:padding="15dp"
            android:background="@drawable/custom_input"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/reasons"
            android:inputType="textPersonName"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>